# infer_text_detector_east

./: .gitignore  CMakeLists.txt  README.md  TextDetectorEAST.cpp  TextDetectorEAST.h  TextDetectorEAST.pro  TextDetectorEastGlobal.h  infer_text_detector_east.pro
Model/: download_model.txt
